logo and minor updates

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <header id="header">
-      <img id="header-img" src="https://bpng.subpng.com/dy/948d9274eb250b5375a11441b726680e/L0KzQYm3VMI6N5xsj5H0aYP2gLBuTgNqb59mhJ9sb33zhcXskr1qa5Dzi59CYYbodrF5jb10bZ94hAQ2c3B4frW0VfFmPmE1TtdrMnS8QYm1UMYxQWY6TKc6NUK4QIO5WMMxP2Q3TpD5bne=/kisspng-signal-computer-icons-waveform-sensor-sound-5ae6006eb2d918.0609554515250228307326.png" alt="logo" />
+      <img id="header-img" src="media/pngegg.png" alt="logo" />
       <nav id="nav-bar">
         <ul>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#faqs">FAQs</a></li>
           <li><a class="nav-link" href="#pricing">Pricing</a></li>
-          <li><a class="nav-link" href="#contact">Contact Us</a></li>
+          <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
